Adds the Git seminar at Biolit to the schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -19,6 +19,14 @@ redirect_from: /tag/speaking/
   <h2 id="schedule">Schedule</h2>
   <p>I keep a list of my upcoming talks at conferences and user groups.</p>
 
+  <h4>
+    <span>Git Seminar at Biolit</span>
+    <div class="nowrap">
+      <span class="inline-info">March 19, 2019</span>
+      <span class="inline-info">Stockholm, Sweden 🇸🇪</span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
