Adds a link for the Git seminar on the speaking page

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -21,7 +21,7 @@ redirect_from: /tag/speaking/
   <p>I keep a list of my upcoming talks at conferences and user groups.</p>
 
   <h4>
-    <span>Git Seminar at Biolit</span>
+      <span><a href="https://www.biolit.se" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Seminar at Biolit</a></span>
     <div class="nowrap">
       <span class="inline-info">March 19, 2019</span>
       <span class="inline-info">Stockholm, Sweden 🇸🇪</span>
