Adds the Cake workshop to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -28,6 +28,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndcoslo.com/workshop/build-and-deployment-automation-for-dotnet-developers/" target="_blank"><i class="fa fa-wrench" aria-hidden="true"></i> Cake Workshop at NDC Oslo 2019</a></span>
+    <div class="nowrap">
+      <span class="inline-info">June 17–18, 2019</span>
+      <span class="inline-info">Oslo, Norway 🇳🇴</span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
