Adds the Git talk at NDC Oslo 2019 to the schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -37,6 +37,16 @@ redirect_from: /tag/speaking/
       <span class="inline-info">Oslo, Norway 🇳🇴</span>
     </div>
   </h4>
+  
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndcoslo.com/talk/understanding-git-behind-the-command-line/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Talk at NDC Oslo 2019</a></span>
+    <div class="nowrap">
+      <span class="inline-info">June 19–21, 2019</span>
+      <span class="inline-info">Oslo, Norway 🇳🇴</span>
+    </div>
+  </h4>
 
   <hr/>
 
