fix broken "speaking" link

--- a/offering/index.html
+++ b/offering/index.html
@@ -22,7 +22,7 @@ title: Offering
   <span class="thumbnail-article" style="background-image: url('/assets/offering/classroom-training.jpg'); background-position: center; width: 230px; height: 153px; margin-left: 3%; margin-top: 8px; box-shadow: 0 0 9px 0 rgba(0,0,0,0.8)"></span>
   The best way for you to learn depends on your needs and how much you can fit in your schedule: it might be enough with just a 1 hour presentation (maybe combined with a breakfast seminar or during lunch break) or you may want to have a full-day workshop. I deliver both kinds of training on any of the <a href="/offering/#topics">topics I specialize in.</a></p>
 
-  <p>If you want to get a sense for my areas of expertise and my teaching style, you're welcome to head over to the <a href=/speaking">speaking page</a> and have a look at some of my previous <a href=/speaking/#presentations">presentations</a>.</p>
+  <p>If you want to get a sense for my areas of expertise and my teaching style, you're welcome to head over to the <a href="/speaking">speaking page</a> and have a look at some of my previous <a href=/speaking/#presentations">presentations</a>.</p>
 
   <p>If you're interested in having me for a full day of training, you're welcome to check out my <a href="/workshops">current workshops</a> and see if you can find something that suits your needs.
 
