--- a/speaking/index.html
+++ b/speaking/index.html
@@ -55,16 +55,16 @@ redirect_from: /tag/speaking/
     Here's a list of podcasts I have been a guest on:
   </p>
 
-  <h4>Developer On Fire 414 <span class="hide">—</span> <a href="https://developeronfire.com/podcast/episode-414-enrico-campidoglio-clean-history" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> Enrico Campidoglio — Clean History</a></h4>
+  <h4 id="developer_on_fire_414">Developer On Fire 414 <span class="hide">—</span> <a href="https://developeronfire.com/podcast/episode-414-enrico-campidoglio-clean-history" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> Enrico Campidoglio — Clean History</a></h4>
   <p>I had a lovely conversation with <a href="https://developeronfire.com/about-the-host/" target="_blank">Dave Rael</a> about what "<em>fires me up</em>" and keeps me going as programmer and teacher. Some of the topics we talked about include how I got into <a href="{{ site.url }}/offering/">teaching</a>, my move from Italy to Sweden, the eternal debate of true vs. clean history in Git and, of course, some computer history with my old <a href="https://en.wikipedia.org/wiki/Olivetti_M24" target="_blank">Olivetti M24</a>.</p>
 
-  <h4>.NET Rocks! 1079 <span class="hide">—</span> <a href="https://www.dotnetrocks.com/?show=1079" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> Databases in Continuous Delivery</a></h4>
+  <h4 id="dotnetrocks_1079">.NET Rocks! 1079 <span class="hide">—</span> <a href="https://www.dotnetrocks.com/?show=1079" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> Databases in Continuous Delivery</a></h4>
   <p>While I was at NDC London 2014, I spoke to Carl and Richard about including
   relational databases in the Continuous Delivery process. I had a lot of fun
   doing this episode and we even managed to squeeze in a few words about vintage
   computers — I couldn't have asked for more.</p>
 
-  <h4>.NET Rocks! 1082 <span class="hide">—</span> <a href="https://www.dotnetrocks.com/?show=1082" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> State of DevOps in .NET at NDC London</a></h4>
+  <h4 id="dotnetrocks_1082">.NET Rocks! 1082 <span class="hide">—</span> <a href="https://www.dotnetrocks.com/?show=1082" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> State of DevOps in .NET at NDC London</a></h4>
   <p>This episode was a panel discussion <a href="https://vimeo.com/113632392">recorded live</a> in front of an audience at NDC London
   2014. The topic was the presence of the DevOps culture among .NET developers.
   During the discussion we also shared our experiences with implementing Continuous Delivery in .NET projects. The panel consisted of Ben Hall, Peter Mounce, Jeff French and myself.</p>
