Improves the first section of the offerings page

--- a/offering/index.html
+++ b/offering/index.html
@@ -6,11 +6,12 @@ title: Offering
 <div id="home">
   <h1 id="header" class="backdrop offering">Offering</h1>
 
-  <p>I've been a consultant since early 2002. During the years, I've joined teams of all sizes to help them develop software for their customers.</p>
+  <p>I've been a consultant since early 2002. During the past {{ site.time | date: "%Y" | minus: 2002 }} years, I've joined teams of all sizes to help them develop software for their customers.<br/>
+  My focus has always been on delivering value by infusing on the team the concept of <a href="/speaking/#developer_on_fire_414">code quality</a> and fast feedback cycles.</p>
 
   <p>I'm a strong believer in continuous improvement. I'm always on the lookout for new things to learn that will help me get better at what I do. Once I learn something, I love sharing that knowledge with others. In fact, I made teaching and mentoring <a href="/about/#my_mission">my mission</a>.</p>
 
-  <p>If you're part of a team of developers who is looking to improve <a href="/offering/#topics">in one of these topics</a>, I might be able to help. Here's what I can do for you.</p>
+  <p>If you're part of a team of developers who is looking to improve their skills in <a href="/offering/#topics">one of these topics</a>, I might be able to help. Here's what I can do for you.</p>
 
   <hr/>
 
