Cleans up the HTML in a few pages

--- a/git/index.html
+++ b/git/index.html
@@ -81,7 +81,7 @@ redirect_from: /tag/git/
     Sometimes, I have more things to say than can fit in an article or a presentation. That's when I make a course instead. However, those take longer so there are fewer of them. In any case, rest assured that every time I publish a new one, you'll find a link for it here.
   </p>
 
-  <h4 id="the_things_git_can_do">Advanced Git Tips and Tricks <span class="hide">—</span> <a href="http://bit.ly/ps-git-tips-tricks"><i class="fa fa-play-circle-o" aria-hidden="true"></i> Pluralsight</a></h4>
+  <h4 id="advanced_git_tips_tricks">Advanced Git Tips and Tricks <span class="hide">—</span> <a href="http://bit.ly/ps-git-tips-tricks"><i class="fa fa-play-circle-o" aria-hidden="true"></i> Pluralsight</a></h4>
   <p class="thumbnail-caption">
     <a href="http://bit.ly/ps-git-tips-tricks">
       <img src="/assets/git/advanced-git-tips-and-tricks-preview.png"
