--- a/offering/index.html
+++ b/offering/index.html
@@ -41,7 +41,7 @@ redirect_from: /hire
   </p>
   </blockquote>
 
-  How? By having me join your team for a while. During that time, I'll be actively working on <em>your project</em> while, at the same time, I'll be <em>coaching</em> the rest of the team in the topics you care about. I call this <em>teaching by doing</em> — I'll teach you how to do something by actually <em>doing</em> it together with you.</p>
+  <p>How? By having me join your team for a while. During that time, I'll be actively working on <em>your project</em> while, at the same time, I'll be <em>coaching</em> the rest of the team in the topics you care about. I call this <em>teaching by doing</em> — I'll teach you how to do something by actually <em>doing</em> it together with you.</p>
 
   <p>In my experience, this is the form of learning with the longest impact, giving teams the best chance to grow and actually change the way they work.</p>
 
