--- a/workshops/index.html
+++ b/workshops/index.html
@@ -8,7 +8,7 @@ title: Workshops
 
   <p>I put together a number of workshops that I can deliver for you and your team on request. They come with a specific set of contents, but I can always customize the agenda to meet your specific needs, if you so desire.</p>
 
-  <p>All workshops include a Q&A session. In order to get the most out of it, I encourage you to email me your questions beforehand. That will help me get a sense for where you stand on the topic and identify any particular areas where to put extra emphasis during the workshop.</p>
+  <p>All workshops include a Q&amp;A session. In order to get the most out of it, I encourage you to email me your questions beforehand. That will help me get a sense for where you stand on the topic and identify any particular areas where to put extra emphasis during the workshop.</p>
 
   <p>If you'd like to know more, here's how you can <a href="/offering/#contact">contact me</a>.</p>
 
