Replaces the use of flag emojis with SVG icons

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -24,7 +24,7 @@ redirect_from: /tag/speaking/
       <span><a href="https://www.biolit.se" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Seminar at Biolit</a></span>
     <div class="nowrap">
       <span class="inline-info">March 19, 2019</span>
-      <span class="inline-info">Stockholm, Sweden 🇸🇪</span>
+      <span class="inline-info">Stockholm, Sweden</span><span class="flag-icon flag-icon-se"></span>
     </div>
   </h4>
 
@@ -34,7 +34,7 @@ redirect_from: /tag/speaking/
     <span><a href="https://ndcoslo.com/workshop/build-and-deployment-automation-for-dotnet-developers/" target="_blank"><i class="fa fa-wrench" aria-hidden="true"></i> Cake Workshop at NDC Oslo 2019</a></span>
     <div class="nowrap">
       <span class="inline-info">June 17–18, 2019</span>
-      <span class="inline-info">Oslo, Norway 🇳🇴</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
     </div>
   </h4>
   
@@ -44,7 +44,7 @@ redirect_from: /tag/speaking/
     <span><a href="https://ndcoslo.com/talk/understanding-git-behind-the-command-line/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Talk at NDC Oslo 2019</a></span>
     <div class="nowrap">
       <span class="inline-info">June 19–21, 2019</span>
-      <span class="inline-info">Oslo, Norway 🇳🇴</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
     </div>
   </h4>
 
