Fixes the indentation in the offering page

--- a/offering/index.html
+++ b/offering/index.html
@@ -37,8 +37,7 @@ redirect_from: /hire
   <p>So, here's my idea:</p>
 
   <blockquote>
-  <p>What if, instead of choosing between <em>training</em> and <em>productivity</em>, you could have both.
-  </p>
+  <p>What if, instead of choosing between <em>training</em> and <em>productivity</em>, you could have both.</p>
   </blockquote>
 
   <p>How? By having me join your team for a while. During that time, I'll be actively working on <em>your project</em> while, at the same time, I'll be <em>coaching</em> the rest of the team in the topics you care about. I call this <em>teaching by doing</em> — I'll teach you how to do something by actually <em>doing</em> it together with you.</p>
