--- a/offering/index.html
+++ b/offering/index.html
@@ -53,7 +53,7 @@ redirect_from: /hire
   <p>Regardless of how you choose to learn, here's the list of topics I specialize in and will gladly teach you.</p>
 
   <ul>
-    <li><a href="/git">Git</a></li>
+    <li><a href="/git">Git</a> and how to <a href="/workshops/#mastering_git">work with it</a> in a team</li>
     <li>Object-oriented design and architecture</li>
     <li>Designing RESTful APIs</li>
     <li>Developing web applications on the .NET Framework or .NET Core with C#</li>
