Adds a link to the CD talk in the offerings page

--- a/offering/index.html
+++ b/offering/index.html
@@ -57,7 +57,7 @@ redirect_from: /hire
     <li>Object-oriented design and architecture</li>
     <li>Designing RESTful APIs</li>
     <li>Developing web applications on the .NET Framework or .NET Core with C#</li>
-    <li>Implementing and maintaining a <em>continuous delivery</em> pipeline</li>
+    <li>Implementing and maintaining a <a href="/speaking/#databases_the_elephant_in_the_cd_room">Continuous Delivery pipeline</a></li>
     <li>Writing <em>readable</em> and <em>maintainable</em> automated tests with C# or Java</li>
     <li>Test-driven development, again with C# or Java</li>
     <li><a href="/speaking/#why_no_code_reviews">Code reviews</a> and how to make them part of your development process</li>
