Adds the CNUG talk to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -47,6 +47,16 @@ redirect_from: /tag/speaking/
       <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
     </div>
   </h4>
+  
+  <p></p>
+
+  <h4>
+    <span><a href="https://www.meetup.com/Copenhagen-Net-User-Group/events/262835171/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Talk at CNUG</a></span>
+    <div class="nowrap">
+      <span class="inline-info">August 20, 2019</span>
+      <span class="inline-info">Copenhagen, Denmark</span><span class="flag-icon flag-icon-dk"></span>
+    </div>
+  </h4>
 
   <hr/>
 
