Adds the NDC Sydney workshop to the schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -58,6 +58,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndcsydney.com/workshop/build-and-deployment-automation-for-net-developers-with-c-and-cake/" target="_blank"><i class="fa fa-wrench" aria-hidden="true"></i> Cake Workshop at NDC Sydney 2019</a></span>
+    <div class="nowrap">
+      <span class="inline-info">October 14–15, 2019</span>
+      <span class="inline-info">Sydney, Australia</span><span class="flag-icon flag-icon-au"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
