Adds the NDC Sydney talk to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -68,6 +68,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndcsydney.com/talk/understanding-git-behind-the-command-line/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Talk at NDC Sydney 2019</a></span>
+    <div class="nowrap">
+      <span class="inline-info">October 16, 2019</span>
+      <span class="inline-info">Sydney, Australia</span><span class="flag-icon flag-icon-au"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
