Adds icons to headers of the contact section

--- a/offering/index.html
+++ b/offering/index.html
@@ -71,15 +71,15 @@ redirect_from: /hire
 
   <p>Do you want me to speak at your company or event? Are you interested in hiring me? If so, I'd love to hear from you. Here's a few different ways you can reach me.</p>
 
-  <h3>Email</h3>
+  <h3><i class="fa fa-envelope" aria-hidden="true"></i> Email</h3>
 
   <p>By far the easiest way to start a conversation with me is by sending off an email. The address is <a href="mailto:enrico@megakemp.com">enrico@megakemp.com</a>.
 
-  <h3>Twitter</h3>
+  <h3><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</h3>
 
   <p>Twitter is great if you just want to ping me about something specific. For example, you may have a burning question <a href="/git">about Git</a> and would like me to take a look at it. You can also DM me, if you prefer. My handle is <a href="https://twitter.com/ecampidoglio" target="_blank">@ecampidoglio</a>.</p>
 
-  <h3>LinkedIn</h3>
+  <h3><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</h3>
 
   <p>If you're on LinkedIn, you can always send me a message there. Here's a link to my <a href="https://www.linkedin.com/in/ecampidoglio" target="_blank">public profile</a>.</p>
 
