Links to the contact section in the offering page

--- a/offering/index.html
+++ b/offering/index.html
@@ -63,7 +63,7 @@ redirect_from: /hire
     <li><a href="/speaking/#why_no_code_reviews">Code reviews</a> and how to make them part of your development process</li>
   </ul>
 
-  <p>If you're interested in learning or improving your knowledge in one of these areas, get in touch. You'll find my contact information below.</p>
+  <p>If you're interested in learning or improving your knowledge in one of these areas, get in touch. You'll find my contact information <a href="#contact">below</a>.</p>
 
   <hr/>
 
