Adds the testimonials to the offering page

--- a/offering/index.html
+++ b/offering/index.html
@@ -67,6 +67,26 @@ redirect_from: /hire
 
   <hr/>
 
+  <h2 id="testimonials">Testimonials</h2>
+
+  <p>I always ask my clients for feedback throughout our collaboration. Once an assignment is over, I ask them if they're willing to share a testimonial. Here's what they had to say:</p>
+
+  <blockquote class="testimonial">
+    <p>Enrico took on the responsibility for our web backend after a short handover. He has been able to resolve all issues and new requirements that we have thrown at him. He has with passion, knowledge and great enthusiasm supported our business and customers in an excellent way.<br/>
+    Enrico's passion for teaching and mentoring has given us a lot more than just his work done.</p>
+  </blockquote>
+  <span>— Jonas Rylander, CTO, Skånska Byggvaror</span>
+
+  <blockquote class="testimonial">
+    <p>At Alfa Laval, the Automation Development department used Bazaar to handle the source code. Bazaar has limited features, so we decided to have a better and more sustainable solution by using Team Foundation Server and Git.<br/>
+    Enrico and I worked together during two intensive days to find the perfect solution.<br/>
+    Enrico found how to migrate from Bazaar to Git while keeping the history and the version flags. He helped me structure the new repositories in Git to fit our needs by creating different branches. He also helped me create Git submodules in our application, to share parts of the code with different projects. This feature really improved our code development.<br/>
+    Enrico knows Git so well; when I have an idea, he helps me realise it in an effective manner.</p>
+  </blockquote>
+  <span>— Edith Lesage, Automation Platform Expert, Alfa Laval</span>
+
+  <hr/>
+
   <h2 id="contact">Contact</h2>
 
   <p>Do you want me to speak at your company or event? Are you interested in hiring me? If so, I'd love to hear from you. Here's a few different ways you can reach me.</p>
