Adds the feedback from Twitter to the Git page

--- a/git/index.html
+++ b/git/index.html
@@ -121,4 +121,47 @@ redirect_from: /tag/git/
     </a>
     In this talk, I teach you the Git zen from the inside out. Working out of real world scenarios, I walk you through Git’s core concepts and building blocks, building our way up to more advanced features. And I do it by showing you graphically what happens under the covers every time you fire a Git command. It’s my belief that this kind of deep understanding of Git’s inner workings is the key to unlock its true power: taking control of your history.
   </p>
+
+  <hr/>
+
+  <h2 id="testimonials">What Others Are Saying</h2>
+  <p>Here's some of the feedback I received from people who watched my Pluralsight courses or attended one of my presentations:</p>
+
+  <blockquote class="tweet">
+    <p>What a course!! <a href="https://www.pluralsight.com/courses/git-advanced-tips-tricks">https://www.pluralsight.com/courses/git-advanced-tips-tricks</a> This will really take your Git workflow to another level. Thanks and enormous kudos to @ecampidoglio!!</p>
+  </blockquote>
+  <span>— Maja Gaćica <a href="https://twitter.com/MajaMimikrija/status/1154672829385850880"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+
+  <blockquote class="tweet">
+    <p>"Advanced Git tips and Tricks" by @ecampidoglio course on Pluralsight is paying for itself. So much good info there!</p>
+  </blockquote>
+  <span>— Igal Tabachnik <a href="https://twitter.com/hmemcpy/status/728166376138022912"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+
+  <blockquote class="tweet">
+    <p>Your passion to Git and level of knowledge inspires me to learn it too :)
+    BTW, thanks for the great Pluralsight course about Git - it's awesome. Started to use some tricks like <code>commit --fixup</code> or <code>rebase --whitespace=fix</code> - real life saver.</p>
+  </blockquote>
+  <span>— Alex Povar <a href="https://twitter.com/zvirja/status/941680752869167105"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+
+  <blockquote class="tweet">
+    <p>@ecampidoglio I'm really enjoying your "Advanced Git Tips and Tricks" Pluralsight course. Well explained &amp; very useful!</p>
+  </blockquote>
+  <span>— José Pedro Dias <a href="https://twitter.com/jose_pedro_dias/status/778748545507614720"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+
+  <blockquote class="tweet">
+    <p>"The things Git can do that none of the GUIs ever told you about" with @ecampidoglio
+ was easily the best #techorama session yet!</p>
+  </blockquote>
+  <span>— Mark Seemann <a href="https://twitter.com/ploeh/status/598418072563777536"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+
+  <blockquote class="tweet">
+    <p>Really great talk from @ecampidoglio at NDC Oslo on Git. First time I've actually understood "low level" git-stuff.</p>
+  </blockquote>
+  <span>— Thomas Darvik <a href="https://twitter.com/ThomasDarvik/status/1141370914686328838"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+
+  <hr/>
+
+  <h2>Bookings</h2>
+  <p>If you'd like me to speak at your event, you can find more information on the <a href="/offering#contact">contact page</a>.</p>
+
 </div>
