Adds another tweet to the Git page

--- a/git/index.html
+++ b/git/index.html
@@ -159,6 +159,11 @@ redirect_from: /tag/git/
   </blockquote>
   <span>— Thomas Darvik <a href="https://twitter.com/ThomasDarvik/status/1141370914686328838"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
 
+  <blockquote class="tweet">
+    <p>Enrico’s Git talks are always brilliant. Highly recommend you check him out.</p>
+  </blockquote>
+  <span>— Mat McLoughlin <a href="https://twitter.com/mat_mcloughlin/status/1141613919297048577"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+
   <hr/>
 
   <h2>Bookings</h2>
