--- a/offering/index.html
+++ b/offering/index.html
@@ -26,7 +26,7 @@ redirect_from: /hire
 
   <p>If you want to get a sense for my areas of expertise and my teaching style, you're welcome to head over to the <a href="/speaking">speaking page</a> and have a look at some of my previous <a href="/speaking/#presentations">presentations</a>.</p>
 
-  <p>If you're interested in having me for a full day of training, you're welcome to check out my <a href="/workshops">current workshops</a> and see if you can find something that suits your needs.
+  <p>If you're interested in having me for a full day of training, you're welcome to check out my current <a href="/workshops">workshops</a> and see if you can find something that suits your needs.
 
   <hr/>
 
