Links to the original tweets in the Git page

--- a/git/index.html
+++ b/git/index.html
@@ -139,39 +139,39 @@ redirect_from: /tag/git/
   <blockquote class="tweet">
     <p>What a course!! <a href="https://www.pluralsight.com/courses/git-advanced-tips-tricks">https://www.pluralsight.com/courses/git-advanced-tips-tricks</a> This will really take your Git workflow to another level. Thanks and enormous kudos to @ecampidoglio!!</p>
   </blockquote>
-  <span>— Maja Gaćica <a href="https://twitter.com/MajaMimikrija/status/1154672829385850880"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+  <span>— <a href="https://twitter.com/MajaMimikrija/status/1154672829385850880">Maja Gaćica</a></span>
 
   <blockquote class="tweet">
     <p>"Advanced Git tips and Tricks" by @ecampidoglio course on Pluralsight is paying for itself. So much good info there!</p>
   </blockquote>
-  <span>— Igal Tabachnik <a href="https://twitter.com/hmemcpy/status/728166376138022912"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+  <span>— <a href="https://twitter.com/hmemcpy/status/728166376138022912">Igal Tabachnik</a></span>
 
   <blockquote class="tweet">
     <p>Your passion to Git and level of knowledge inspires me to learn it too :)
     BTW, thanks for the great Pluralsight course about Git - it's awesome. Started to use some tricks like <code>commit --fixup</code> or <code>rebase --whitespace=fix</code> - real life saver.</p>
   </blockquote>
-  <span>— Alex Povar <a href="https://twitter.com/zvirja/status/941680752869167105"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+  <span>— <a href="https://twitter.com/zvirja/status/941680752869167105">Alex Povar</a></span>
 
   <blockquote class="tweet">
     <p>@ecampidoglio I'm really enjoying your "Advanced Git Tips and Tricks" Pluralsight course. Well explained &amp; very useful!</p>
   </blockquote>
-  <span>— José Pedro Dias <a href="https://twitter.com/jose_pedro_dias/status/778748545507614720"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+  <span>— <a href="https://twitter.com/jose_pedro_dias/status/778748545507614720">José Pedro Dias</a></span>
 
   <blockquote class="tweet">
     <p>"The things Git can do that none of the GUIs ever told you about" with @ecampidoglio
  was easily the best #techorama session yet!</p>
   </blockquote>
-  <span>— Mark Seemann <a href="https://twitter.com/ploeh/status/598418072563777536"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+  <span>— <a href="https://twitter.com/ploeh/status/598418072563777536">Mark Seemann</a></span>
 
   <blockquote class="tweet">
     <p>Really great talk from @ecampidoglio at NDC Oslo on Git. First time I've actually understood "low level" git-stuff.</p>
   </blockquote>
-  <span>— Thomas Darvik <a href="https://twitter.com/ThomasDarvik/status/1141370914686328838"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+  <span>— <a href="https://twitter.com/ThomasDarvik/status/1141370914686328838">Thomas Darvik</a></span>
 
   <blockquote class="tweet">
     <p>Enrico’s Git talks are always brilliant. Highly recommend you check him out.</p>
   </blockquote>
-  <span>— Mat McLoughlin <a href="https://twitter.com/mat_mcloughlin/status/1141613919297048577"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+  <span>— <a href="https://twitter.com/mat_mcloughlin/status/1141613919297048577">Mat McLoughlin</a></span>
 
   <hr/>
 
