Removes the workshop level from the description

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -16,7 +16,7 @@ title: Workshops
 
   <h2 id="understanding_git">
     <span class="nowrap">Understanding Git —</span>&nbsp;<span class="nowrap">Behind the Command Line</span><br/>
-    <span class="subtitle">1 Day — Beginner</span>
+    <span class="subtitle">1 Day</span>
   </h2>
 
   <p>Git has become the <em>de-facto</em> version control system of our industry, and for good reason. What you're able to achieve with Git is unmatched by any other version control system that came before it. But for all its power and flexibility, Git has a terrible flaw: its complexity. A myriad of awkwardly named commands and options, have earned Git the reputation of being <em>hard</em>—and unnecessarily so—both to learn and to use.</p>
@@ -66,7 +66,7 @@ title: Workshops
 
   <h2 id="mastering_git">
     <span class="nowrap">Mastering Git —</span>&nbsp;<span class="nowrap">Beyond the Command Line</span><br/>
-    <span class="subtitle">1 Day — Intermediate</span>
+    <span class="subtitle">1 Day</span>
   </h2>
 
   <p>You've been using Git for a while and feel pretty comfortable with the basics: committing, creating branches, merging — you got that. However, something is missing; maybe you feel you're not taking full advantage of what Git has to offer; maybe you occasionally end up with an entangled history and would like to know how to avoid that. You want to know more. If this sounds like your situation, then this workshop is for you.</p>
