Adds the Cake workshop to the workshop page

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -14,6 +14,36 @@ title: Workshops
 
   <hr/>
 
+  <h2 id="build_and_deployment_automation_for_net_developers">
+      <span class="nowrap">Build and Deployment Automation&nbsp;</span><span class="nowrap">for .NET Developers&nbsp;</span><span class="nowrap">(with C# and Cake)</span><br/>
+    <span class="subtitle">2 Days</span>
+  </h2>
+
+  <p>Remember when most web applications were just a website and a SQL database? Yeah, things are different these days. Modern web applications consist of an ever increasing number of moving parts: JavaScript frontends, web APIs, microservices, cloud environments—the list goes on. Building and deploying these applications involves joggling a complex set of tools and services—each with their own rules and requirements—and make them all come together in a unified process. On top of that, modern development teams are expected to release software often, which means that those processes must be entirely automated, from source code to production servers.</p>
+
+  <p>As a .NET developer living in a DevOps culture, how do you achieve that without having to invest in learning a whole new set of tools and languages? Meet <a href="https://cakebuild.net" target="_blank">Cake</a>. Cake is an open source cross-platform build automation tool with a surprisingly rich ecosystem of integrations to third-party tools and services. And the best part is: it uses a beautiful C# DSL that will make you feel right at home.</p>
+
+  <h3>What You Will Learn</h3>
+
+  <p>In this workshop, you will learn everything you need to know to automate a complete build and deployment pipeline for a modern ASP.NET Core web application using nothing more than C# and Cake.</p>
+
+  <p>You will know how to apply your existing C# and .NET skills to automate a modern build and deployment pipeline — as a bonus, you'll also learn how to write maintainable build scripts that can adapt as the needs of the software change.</p>
+
+  <h3>Topics</h3>
+
+  <ul>
+    <li>Compiling using MSBuild and the .NET Core CLI tools</li>
+    <li>Running automated tests and measuring code coverage</li>
+    <li>Versioning based on the Git history of the project</li>
+    <li>Packaging using NuGet or as regular Zip files</li>
+    <li>Deploying to an on-premises web server using Octopus Deploy</li>
+    <li>Deploying to an Azure Website using Kudu</li>
+    <li>Integrating with CI servers such as TeamCity, Azure DevOps and Travis CI</li>
+    <li>Troubleshooting the pipeline with logging and debugging</li>
+  </ul>
+
+  <hr/>
+
   <h2 id="understanding_git">
     <span class="nowrap">Understanding Git —</span>&nbsp;<span class="nowrap">Behind the Command Line</span><br/>
     <span class="subtitle">1 Day</span>
