Adds the workshop schedule to the workshop page

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Workshops
+image: backdrop.jpg
 ---
 
 <div id="home">
@@ -11,6 +12,29 @@ title: Workshops
   <p>All workshops include a Q&amp;A session. In order to get the most out of it, I encourage you to email me your questions beforehand. That will help me get a sense for where you stand on the topic and identify any particular areas where to put extra emphasis during the workshop.</p>
 
   <p>If you'd like to know more, here's how you can <a href="/offering/#contact">contact me</a>.</p>
+
+  <hr/>
+
+  <h2 id="schedule">Schedule</h2>
+  <p>Here's a list of upcoming hosted workshops. Please, follow the link to the event's page for availability and bookings.</p>
+
+  <h4>
+    <span><a href="https://ndcoslo.com/workshop/build-and-deployment-automation-for-dotnet-developers/" target="_blank">NDC Oslo 2019</a></span>
+    <div class="nowrap">
+      <span class="inline-info">June 17–18, 2019</span><span class="hide">—</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
+    </div>
+  </h4>
+
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndcsydney.com/workshop/build-and-deployment-automation-for-net-developers-with-c-and-cake/" target="_blank">NDC Sydney 2019</a></span>
+    <div class="nowrap">
+      <span class="inline-info">October 14–15, 2019</span><span class="hide">—</span>
+      <span class="inline-info">Sydney, Australia</span><span class="flag-icon flag-icon-au"></span>
+    </div>
+  </h4>
 
   <hr/>
 
