Adds an em dash between date and place in the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -23,7 +23,7 @@ redirect_from: /tag/speaking/
   <h4>
       <span><a href="https://www.biolit.se" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Seminar at Biolit</a></span>
     <div class="nowrap">
-      <span class="inline-info">March 19, 2019</span>
+      <span class="inline-info">March 19, 2019</span><span class="hide">—</span>
       <span class="inline-info">Stockholm, Sweden</span><span class="flag-icon flag-icon-se"></span>
     </div>
   </h4>
@@ -33,7 +33,7 @@ redirect_from: /tag/speaking/
   <h4>
     <span><a href="https://ndcoslo.com/workshop/build-and-deployment-automation-for-dotnet-developers/" target="_blank"><i class="fa fa-wrench" aria-hidden="true"></i> Cake Workshop at NDC Oslo 2019</a></span>
     <div class="nowrap">
-      <span class="inline-info">June 17–18, 2019</span>
+      <span class="inline-info">June 17–18, 2019</span><span class="hide">—</span>
       <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
     </div>
   </h4>
@@ -43,7 +43,7 @@ redirect_from: /tag/speaking/
   <h4>
     <span><a href="https://ndcoslo.com/talk/understanding-git-behind-the-command-line/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Talk at NDC Oslo 2019</a></span>
     <div class="nowrap">
-      <span class="inline-info">June 19–21, 2019</span>
+      <span class="inline-info">June 19–21, 2019</span><span class="hide">—</span>
       <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
     </div>
   </h4>
@@ -53,7 +53,7 @@ redirect_from: /tag/speaking/
   <h4>
     <span><a href="https://www.meetup.com/Copenhagen-Net-User-Group/events/262835171/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Talk at CNUG</a></span>
     <div class="nowrap">
-      <span class="inline-info">August 20, 2019</span>
+      <span class="inline-info">August 20, 2019</span><span class="hide">—</span>
       <span class="inline-info">Copenhagen, Denmark</span><span class="flag-icon flag-icon-dk"></span>
     </div>
   </h4>
@@ -63,7 +63,7 @@ redirect_from: /tag/speaking/
   <h4>
     <span><a href="https://ndcsydney.com/workshop/build-and-deployment-automation-for-net-developers-with-c-and-cake/" target="_blank"><i class="fa fa-wrench" aria-hidden="true"></i> Cake Workshop at NDC Sydney 2019</a></span>
     <div class="nowrap">
-      <span class="inline-info">October 14–15, 2019</span>
+      <span class="inline-info">October 14–15, 2019</span><span class="hide">—</span>
       <span class="inline-info">Sydney, Australia</span><span class="flag-icon flag-icon-au"></span>
     </div>
   </h4>
@@ -73,7 +73,7 @@ redirect_from: /tag/speaking/
   <h4>
     <span><a href="https://ndcsydney.com/talk/understanding-git-behind-the-command-line/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Git Talk at NDC Sydney 2019</a></span>
     <div class="nowrap">
-      <span class="inline-info">October 16, 2019</span>
+      <span class="inline-info">October 16, 2019</span><span class="hide">—</span>
       <span class="inline-info">Sydney, Australia</span><span class="flag-icon flag-icon-au"></span>
     </div>
   </h4>
