Changes a word in the offering page

--- a/offering/index.html
+++ b/offering/index.html
@@ -48,7 +48,7 @@ redirect_from: /hire
 
   <hr/>
 
-  <h2 id="topics">Topics</h2>
+  <h2 id="topics">Expertise</h2>
 
   <p>Regardless of how you choose to learn, here's the list of topics I specialize in and will gladly teach you.</p>
 
