--- a/workshops/index.html
+++ b/workshops/index.html
@@ -11,12 +11,13 @@ image: backdrop.jpg
 
   <p>All workshops include a Q&amp;A session. In order to get the most out of it, I encourage you to email me your questions beforehand. That will help me get a sense for where you stand on the topic and identify any particular areas where to put extra emphasis during the workshop.</p>
 
-  <p>If you'd like to know more, here's how you can <a href="/offering/#contact">contact me</a>.</p>
+  <p>If you'd like to know more, don't hesitate to <a href="/offering/#contact">contact me</a>.</p>
 
   <hr/>
 
   <h2 id="schedule">Schedule</h2>
-  <p>Here's a list of upcoming hosted workshops. Please, follow the link to the event's page for availability and bookings.</p>
+
+  <p>Here's a list of my upcoming hosted workshops. Please, follow the link to the event's page for availability and bookings.</p>
 
   <h4>
     <span><a href="https://ndcoslo.com/workshop/build-and-deployment-automation-for-dotnet-developers/" target="_blank">NDC Oslo 2019</a></span>
