Adds a bookings section to the workshops page

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -165,4 +165,10 @@ image: backdrop.jpg
 
   <p>You should also be familiar with handling a command-line shell. During the workshop, I'll use either <em>PowerShell</em> or <em>Bash</em>, based on your preference.</p>
 
+  <hr/>
+
+  <h2 id="bookings">Bookings</h2>
+
+  <p>If you'd like to have a workshop at your company or event, you can find more information on how to reach me on the <a href="/offering#contact">contact page</a></p>.
+
 </div>
