Adds the excerpt to the offering page

--- a/offering/index.html
+++ b/offering/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Offering
 assets: offering
 image: backdrop.jpg
+excerpt: If you're part of a team of developers who is looking to improve their skills, I might be able to help. Here's what I can do for you.
 redirect_from: /hire
 ---
 
