Adds the testimonial from Philip Juhl to the offering page

--- a/offering/index.html
+++ b/offering/index.html
@@ -106,6 +106,13 @@ redirect_from: /hire
   </blockquote>
   <span>— Edith Lesage, Automation Platform Expert, Alfa Laval</span>
 
+  <blockquote class="testimonial">
+    <p>I've had the pleasure of holding a Meetup with Enrico Campidoglio.<br/>
+    Enrico's presentation was very clear. He took a "simple" but complex tool like Git and broke it down into smaller parts that made it easier to understand.<br/>
+    Enrico has a deep knowledge of Git and in general about source control, and is very accurate and thorough in his explanations. Something that is very important when your audience is experienced software developers.</p>
+  </blockquote>
+  <span>— Philip Juhl, Product Owner at DevOps-Serviceteam, Jyske Bank</span>
+
   <hr/>
 
   <h2 id="contact">Contact</h2>
