--- a/workshops/index.html
+++ b/workshops/index.html
@@ -37,6 +37,16 @@ image: backdrop.jpg
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndcdevops.com/workshop/build-and-deployment-automation-for-net-developers-with-c-and-cake/" target="_blank">NDC DevOps 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">March 11–12, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="build_and_deployment_automation_for_net_developers">
