Updates the title of the Cake workshop

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -49,8 +49,8 @@ image: backdrop.jpg
 
   <hr/>
 
-  <h2 id="build_and_deployment_automation_for_net_developers">
-      <span class="nowrap">Build and Deployment Automation&nbsp;</span><span class="nowrap">for .NET Developers&nbsp;</span><span class="nowrap">(with C# and Cake)</span><br/>
+  <h2 id="building_a_deployment_pipeline_with_csharp_and_cake">
+    <span class="nowrap">Building a Deployment</span>&nbsp;<span class="nowrap">Pipeline with C# and Cake</span><br/>
     <span class="subtitle">2 Days</span>
   </h2>
 
