--- a/workshops/index.html
+++ b/workshops/index.html
@@ -47,6 +47,16 @@ image: backdrop.jpg
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndccopenhagen.com/workshop/building-a-deployment-pipeline-with-c-and-cake/" target="_blank">NDC Copenhagen 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">April 1–2, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Copenhagen, Denmark</span><span class="flag-icon flag-icon-dk"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="building_a_deployment_pipeline_with_csharp_and_cake">
