Renames the workshops page to training

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Workshops
+title: Training
 image: backdrop.jpg
 ---
 
 <div id="home">
-  <h1 class="backdrop workshops">Workshops</h1>
+  <h1 class="backdrop workshops">Training</h1>
 
   <p>I put together a number of workshops that I can deliver for you and your team on request. They come with a specific set of contents, but I can always customize the agenda to meet your specific needs, if you so desire.</p>
 
