--- a/workshops/index.html
+++ b/workshops/index.html
@@ -17,7 +17,7 @@ image: backdrop.jpg
 
   <h2 id="schedule">Schedule</h2>
 
-  <p>Here's a list of my upcoming hosted workshops. Please, follow the link to the event's page for availability and bookings.</p>
+  <p>Here's a list of my upcoming public workshops. Please, follow the link to the event's page for availability and bookings.</p>
 
   <h4>
     <span><a href="https://ndcoslo.com/workshop/build-and-deployment-automation-for-dotnet-developers/" target="_blank">NDC Oslo 2019</a></span>
