Renames the offering page to services

--- a/git/index.html
+++ b/git/index.html
@@ -177,6 +177,6 @@ redirect_from: /tag/git/
   <hr/>
 
   <h2>Bookings</h2>
-  <p>If you'd like me to speak at your company or event, you can find more information on the <a href="/offering#contact">contact page</a>.</p>
+  <p>If you'd like me to speak at your company or event, you can find more information on the <a href="/services#contact">contact page</a>.</p>
 
 </div>
