--- a/services/index.html
+++ b/services/index.html
@@ -1,21 +1,22 @@
 ---
 layout: default
-title: Offering
-assets: offering
+title: Services
+assets: services
 image: backdrop.jpg
 excerpt: If you're part of a team of developers who is looking to improve their skills, I might be able to help. Here's what I can do for you.
+redirect_from: /offering
 redirect_from: /hire
 ---
 
 <div id="home">
-  <h1 id="header" class="backdrop offering">Offering</h1>
+  <h1 id="header" class="backdrop services">Services</h1>
 
   <p>I've been a consultant since early 2002. During the past {{ site.time | date: "%Y" | minus: 2002 }} years, I've joined teams of all sizes to help them develop software for their customers.<br/>
   My focus has always been on delivering value by infusing on the team the concept of <a href="/speaking/#developer_on_fire_414">code quality</a> and fast feedback cycles.</p>
 
   <p>I'm a strong believer in continuous improvement. I'm always on the lookout for new things to learn that will help me get better at what I do. Once I learn something, I love sharing that knowledge with others. In fact, I made teaching and mentoring <a href="/about/#my_mission">my mission</a>.</p>
 
-  <p>If you're part of a team of developers who is looking to improve their skills in <a href="/offering/#topics">one of these topics</a>, I might be able to help. Here's what I can do for you.</p>
+  <p>If you're part of a team of developers who is looking to improve their skills in <a href="/services/#topics">one of these topics</a>, I might be able to help. Here's what I can do for you.</p>
 
   <hr/>
 
@@ -24,8 +25,8 @@ redirect_from: /hire
   <p>When you first approach a new topic, it's easy to feel overwhelmed by the sheer amount of information available to you. It's hard to know where to start. In those cases, the easiest way to jump-start your learning is it to have someone come in and point you in the right direction, help you separate the signal from the noise.</p>
 
   <p>
-  <span class="thumbnail-article" style="background-image: url('/assets/offering/classroom-training.jpg'); background-position: center; width: 230px; height: 153px; margin-left: 3%; margin-top: 8px; box-shadow: 0 0 9px 0 rgba(0,0,0,0.8)"></span>
-  The best way for you to learn depends on your needs and how much you can fit in your schedule: it might be enough with just a 1 hour presentation (maybe combined with a breakfast seminar or during lunch break) or you may want to have a full-day workshop. I deliver both kinds of training on any of the <a href="/offering/#topics">topics I specialize in.</a></p>
+  <span class="thumbnail-article" style="background-image: url('/assets/services/classroom-training.jpg'); background-position: center; width: 230px; height: 153px; margin-left: 3%; margin-top: 8px; box-shadow: 0 0 9px 0 rgba(0,0,0,0.8)"></span>
+  The best way for you to learn depends on your needs and how much you can fit in your schedule: it might be enough with just a 1 hour presentation (maybe combined with a breakfast seminar or during lunch break) or you may want to have a full-day workshop. I deliver both kinds of training on any of the <a href="/services/#topics">topics I specialize in.</a></p>
 
   <p>If you want to get a sense for my areas of expertise and my teaching style, you're welcome to head over to the <a href="/speaking">speaking page</a> and have a look at some of my previous <a href="/speaking/#presentations">presentations</a>.</p>
 
@@ -134,7 +135,7 @@ redirect_from: /hire
 
   <div class="footnotes">
     <p>
-    The image used at the <a href="/offering/#header">top of this page</a> is a modification based on a photo kindly licensed by the <a href="https://techorama.be" target="_blank">Techorama conference</a>.
+    The image used at the <a href="/services/#header">top of this page</a> is a modification based on a photo kindly licensed by the <a href="https://techorama.be" target="_blank">Techorama conference</a>.
     </p>
   </div>
 </div>
