--- a/workshops/index.html
+++ b/workshops/index.html
@@ -11,7 +11,7 @@ image: backdrop.jpg
 
   <p>All workshops include a Q&amp;A session. In order to get the most out of it, I encourage you to email me your questions beforehand. That will help me get a sense for where you stand on the topic and identify any particular areas where to put extra emphasis during the workshop.</p>
 
-  <p>If you'd like to know more, don't hesitate to <a href="/offering/#contact">contact me</a>.</p>
+  <p>If you'd like to know more, don't hesitate to <a href="/services/#contact">contact me</a>.</p>
 
   <hr/>
 
@@ -195,6 +195,6 @@ image: backdrop.jpg
 
   <h2 id="bookings">Bookings</h2>
 
-  <p>If you'd like to have a workshop at your company or event, you can find more information on how to reach me on the <a href="/offering#contact">contact page</a></p>.
+  <p>If you'd like to have a workshop at your company or event, you can find more information on how to reach me on the <a href="/services#contact">contact page</a></p>.
 
 </div>
