Adds the customer logos to the testimonials

--- a/services/index.html
+++ b/services/index.html
@@ -94,12 +94,14 @@ redirect_from: /hire/
 
   <p>I always ask my clients for feedback throughout our collaboration. Once an assignment is over, I ask them if they're willing to share a testimonial. Here's what they had to say:</p>
 
+  <img class="customerlogo" src="/assets/services/skanskabyggvaror.png" />
   <blockquote class="testimonial">
     <p>Enrico took on the responsibility for our web backend after a short handover. He has been able to resolve all issues and new requirements that we have thrown at him. He has with passion, knowledge and great enthusiasm supported our business and customers in an excellent way.<br/>
     Enrico's passion for teaching and mentoring has given us a lot more than just his work done.</p>
   </blockquote>
   <span>— Jonas Rylander, CTO, Skånska Byggvaror</span>
 
+  <img class="customerlogo" src="/assets/services/alfalaval.png" />
   <blockquote class="testimonial">
     <p>At Alfa Laval, the Automation Development department used Bazaar to handle the source code. Bazaar has limited features, so we decided to have a better and more sustainable solution by using Team Foundation Server and Git.<br/>
     Enrico and I worked together during two intensive days to find the perfect solution.<br/>
@@ -108,6 +110,7 @@ redirect_from: /hire/
   </blockquote>
   <span>— Edith Lesage, Automation Platform Expert, Alfa Laval</span>
 
+  <img class="customerlogo" src="/assets/services/jyskebank.png" />
   <blockquote class="testimonial">
     <p>I've had the pleasure of holding a Meetup with Enrico Campidoglio.<br/>
     Enrico's presentation was very clear. He took a "simple" but complex tool like Git and broke it down into smaller parts that made it easier to understand.<br/>
