--- a/services/index.html
+++ b/services/index.html
@@ -4,8 +4,9 @@ title: Services
 assets: services
 image: backdrop.jpg
 excerpt: If you're part of a team of developers who is looking to improve their skills, I might be able to help. Here's what I can do for you.
-redirect_from: /offering/
-redirect_from: /hire/
+redirect_from:
+  - /offering/
+  - /hire/
 ---
 
 <div id="home">
