--- a/services/index.html
+++ b/services/index.html
@@ -21,7 +21,7 @@ redirect_from:
 
   <hr/>
 
-  <h2 id="on_site_training">On-site Training</h2>
+  <h2 id="training">Training</h2>
 
   <p>When you first approach a new topic, it's easy to feel overwhelmed by the sheer amount of information available to you. It's hard to know where to start. In those cases, the easiest way to jump-start your learning is it to have someone come in and point you in the right direction, help you separate the signal from the noise.</p>
 
@@ -35,7 +35,7 @@ redirect_from:
 
   <hr/>
 
-  <h2 id="teaching_by_doing">Teaching by Doing</h2>
+  <h2 id="mentoring">Mentoring</h2>
 
   <p>Traditional classroom training is a great way to get you started on a topic but it can only get you so far. Once the workshop is over, it's up to you to continue your journey by finding new ways to learn. Being in training also means <em>being away from your project</em>. This alone can seriously limit the amount of time you are able to invest.</p>
 
@@ -68,7 +68,7 @@ redirect_from:
     <li>Migrating the history of a code base from [Subversion, TFS, Mercurial, Bazaar] to Git</li>
   </ul>
 
-  <p>These assignments typically take the form of dedicated workshop days where we walk through the task at hand together. Depending on the scope and complexity of the project, these sessions can either be held in person, remotely or a little bit of both. Of course, you can also choose to have me <a href="#teaching_by_doing">on your team</a> for longer assignments.</p>
+  <p>These assignments typically take the form of dedicated workshop days where we walk through the task at hand together. Depending on the scope and complexity of the project, these sessions can either be held in person, remotely or a little bit of both. Of course, you can also choose to have me <a href="#mentoring">on your team</a> for longer assignments.</p>
 
   <hr/>
 
