--- a/speaking/index.html
+++ b/speaking/index.html
@@ -20,6 +20,14 @@ redirect_from: /tag/speaking/
   <h2 id="schedule">Schedule</h2>
   <p>I keep a list of my upcoming talks at conferences and user groups.</p>
 
+  <h4>
+      <span><a href="https://ndcdevops.com/speaker/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC DevOps 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">March 11–13, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
